--- a/Proyecto matemática/index.html
+++ b/Proyecto matemática/index.html
@@ -32,7 +32,7 @@
 
             <!-- Botones adicionales -->
             <div class="additional-options mt-3">
-                <a href="./contraseña-olvidada.html" class="btn-link" id="forgotPassword">¿Olvidaste tu contraseña?</a>
+                <a href="./contrasena-olvidada.html" class="btn-link" id="forgotPassword">¿Olvidaste tu contraseña?</a>
                 <span class="divider">|</span>
                 <a href="./registrarse.html" class="btn-link" id="register">Registrarse</a>
             </div>
