--- a/proyecto-matematica/dashboard.html
+++ b/proyecto-matematica/dashboard.html
@@ -25,9 +25,17 @@
                         <span id="currentUser">Usuario</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="./dashboard.html"><i class="fas fa-cog me-2"></i>Configuración</a></li>
+                        <li>
+                            <a class="dropdown-item" href="./dashboard.html">
+                                <i class="fas fa-tachometer-alt me-2"></i>Dashboard
+                            </a>
+                        </li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#" id="logoutBtn"><i class="fas fa-sign-out-alt me-2"></i>Cerrar Sesión</a></li>
+                        <li>
+                            <a class="dropdown-item" href="#" id="logoutBtn">
+                                <i class="fas fa-sign-out-alt me-2"></i>Cerrar Sesión
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -60,13 +68,13 @@
                     </div>
                 </div>
 
-                <!-- Métricas Rápidas -->
+                <!-- Métrica rápida (puede quedar estática o luego la haces dinámica) -->
                 <div class="metric-card mt-3">
                     <h6><i class="fas fa-tachometer-alt me-2"></i>Rendimiento General</h6>
                     <div class="progress mb-2">
                         <div class="progress-bar bg-success" style="width: 78%"></div>
                     </div>
-                    <small>Tasa de acierto: 78%</small>
+                    <small>Tasa de acierto (ejemplo): 78%</small>
                 </div>
             </div>
 
@@ -75,7 +83,9 @@
                 <!-- Welcome Section -->
                 <div class="welcome-section mb-4">
                     <h2>Bienvenido, <span id="welcomeUser">Estudiante</span></h2>
-                    <p class="text-muted">Plataforma de apoyo matemático con práctica interactiva y retroalimentación inmediata</p>
+                    <p class="text-muted">
+                        Plataforma de apoyo matemático con práctica interactiva y retroalimentación inmediata.
+                    </p>
                 </div>
 
                 <!-- Modules Section -->
@@ -88,12 +98,14 @@
                                     <i class="fas fa-chart-line"></i>
                                 </div>
                                 <h4>Funciones Cuadráticas</h4>
-                                <p class="text-muted">Practica con ecuaciones de segundo grado, parábolas, vértices y análisis gráfico.</p>
+                                <p class="text-muted">
+                                    Practica con ecuaciones de segundo grado, parábolas, vértices y análisis gráfico.
+                                </p>
                                 <div class="module-progress">
                                     <div class="progress mb-2">
                                         <div class="progress-bar" style="width: 65%"></div>
                                     </div>
-                                    <small>65% completado - 13/20 ejercicios</small>
+                                    <small>Ejemplo: 65% completado</small>
                                 </div>
                                 <button class="btn btn-primary mt-3 start-module-btn" data-module="quadratic">
                                     <i class="fas fa-play me-2"></i>Iniciar Práctica
@@ -107,12 +119,14 @@
                                     <i class="fas fa-wave-square"></i>
                                 </div>
                                 <h4>Funciones Trigonométricas</h4>
-                                <p class="text-muted">Domina seno, coseno, tangente, amplitudes, periodos y aplicaciones prácticas.</p>
+                                <p class="text-muted">
+                                    Domina seno, coseno, tangente, amplitudes, periodos y aplicaciones prácticas.
+                                </p>
                                 <div class="module-progress">
                                     <div class="progress mb-2">
                                         <div class="progress-bar" style="width: 30%"></div>
                                     </div>
-                                    <small>30% completado - 6/20 ejercicios</small>
+                                    <small>Ejemplo: 30% completado</small>
                                 </div>
                                 <button class="btn btn-success mt-3 start-module-btn" data-module="trigonometric">
                                     <i class="fas fa-play me-2"></i>Iniciar Práctica
@@ -136,7 +150,7 @@
                         </div>
                     </div>
 
-                    <!-- Métricas Detalladas -->
+                    <!-- Métricas Detalladas (pueden ser estáticas o luego dinámicas) -->
                     <div class="row">
                         <div class="col-md-6">
                             <div class="metric-card">
@@ -144,7 +158,7 @@
                                 <div class="progress mb-2">
                                     <div class="progress-bar bg-info" style="width: 82%"></div>
                                 </div>
-                                <small>82% de respuestas correctas</small>
+                                <small>Ejemplo: 82% de respuestas correctas</small>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -153,7 +167,7 @@
                                 <div class="progress mb-2">
                                     <div class="progress-bar bg-warning" style="width: 65%"></div>
                                 </div>
-                                <small>45 minutos promedio por sesión</small>
+                                <small>Ejemplo: 45 minutos promedio por sesión</small>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -162,7 +176,7 @@
                                 <div class="progress mb-2">
                                     <div class="progress-bar bg-success" style="width: 90%"></div>
                                 </div>
-                                <small>90% de actividades completadas</small>
+                                <small>Ejemplo: 90% de actividades completadas</small>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -171,7 +185,7 @@
                                 <div class="progress mb-2">
                                     <div class="progress-bar bg-primary" style="width: 75%"></div>
                                 </div>
-                                <small>75% de recursos utilizados</small>
+                                <small>Ejemplo: 75% de recursos utilizados</small>
                             </div>
                         </div>
                     </div>
@@ -187,26 +201,25 @@
                                     <thead>
                                         <tr>
                                             <th>Fecha</th>
-                                            <th>Módulo</th>
-                                            <th>Ejercicios</th>
+                                            <th>Módulo / Nivel</th>
+                                            <th>Preguntas</th>
                                             <th>Aciertos</th>
-                                            <th>Tiempo</th>
+                                            <th>Puntaje</th>
                                         </tr>
                                     </thead>
                                     <tbody id="historyTable">
-                                        <!-- Datos se llenarán con JavaScript -->
+                                        <!-- Se llena con dashboard.js -->
                                     </tbody>
                                 </table>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> <!-- /col-md-9 -->
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/dashboard.js"></script>
 </body>
 </html>
