--- a/proyecto-matematica/ejercicio.html
+++ b/proyecto-matematica/ejercicio.html
@@ -40,21 +40,23 @@
     <!-- Contenido Principal -->
     <div class="container mt-4">
         <div class="row">
-            <!-- Panel de Información -->
             <div class="col-md-8 mx-auto">
+
                 <!-- Header del Ejercicio -->
                 <div class="exercise-header mb-4">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 id="exerciseTitle">Ejercicio de Funciones</h2>
                         <div class="exercise-info">
-                            <span class="badge bg-primary" id="moduleBadge">Cuadráticas</span>
-                            <span class="badge bg-secondary" id="difficultyBadge">Intermedio</span>
+                            <span class="badge bg-primary" id="moduleBadge">Módulo</span>
+                            <span class="badge bg-secondary" id="difficultyBadge">Nivel</span>
                         </div>
                     </div>
-                    <p class="text-muted" id="exerciseDescription">Resuelve el siguiente ejercicio paso a paso</p>
+                    <p class="text-muted" id="exerciseDescription">
+                        Resuelve el siguiente ejercicio paso a paso.
+                    </p>
                 </div>
 
-                <!-- Imagen Central -->
+                <!-- Imagen -->
                 <div class="exercise-image-container mb-4">
                     <div class="image-wrapper">
                         <img id="exerciseImage" src="./assets/images/placeholder-graph.png" 
@@ -66,16 +68,15 @@
                     </div>
                 </div>
 
-                <!-- Contexto del Ejercicio -->
+                <!-- Contexto -->
                 <div class="exercise-context mb-4">
                     <h5><i class="fas fa-book me-2"></i>Contexto del Problema</h5>
                     <div class="context-text" id="contextText">
-                        Un proyectil es lanzado desde el suelo con una velocidad inicial. 
-                        Su trayectoria sigue una función cuadrática. Analiza el movimiento...
+                        Aquí se describirá el contexto del ejercicio cargado desde el servidor.
                     </div>
                 </div>
 
-                <!-- Formulario de Preguntas -->
+                <!-- Preguntas -->
                 <div class="exercise-questions">
                     <h5><i class="fas fa-question-circle me-2"></i>Preguntas</h5>
                     
@@ -84,57 +85,52 @@
                         <div class="question-item mb-4">
                             <label for="answer1" class="question-label">
                                 <strong>1.</strong> 
-                                <span id="question1Text">¿Cuál es la altura máxima que alcanza el proyectil?</span>
+                                <span id="question1Text">Pregunta 1</span>
                             </label>
                             <div class="input-group">
                                 <input type="text" class="form-control answer-input" 
                                        id="answer1" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">metros</span>
+                                <span class="input-group-text">unidad</span>
                             </div>
-                            <div class="form-text">Incluye las unidades en tu respuesta</div>
                         </div>
 
                         <!-- Pregunta 2 -->
                         <div class="question-item mb-4">
                             <label for="answer2" class="question-label">
                                 <strong>2.</strong> 
-                                <span id="question2Text">¿En qué tiempo alcanza la altura máxima?</span>
+                                <span id="question2Text">Pregunta 2</span>
                             </label>
                             <div class="input-group">
                                 <input type="text" class="form-control answer-input" 
                                        id="answer2" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">segundos</span>
+                                <span class="input-group-text">unidad</span>
                             </div>
-                            <div class="form-text">Respuesta en formato decimal</div>
                         </div>
 
                         <!-- Pregunta 3 -->
                         <div class="question-item mb-4">
                             <label for="answer3" class="question-label">
                                 <strong>3.</strong> 
-                                <span id="question3Text">¿A qué distancia cae el proyectil?</span>
+                                <span id="question3Text">Pregunta 3</span>
                             </label>
                             <div class="input-group">
                                 <input type="text" class="form-control answer-input" 
                                        id="answer3" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">metros</span>
+                                <span class="input-group-text">unidad</span>
                             </div>
-                            <div class="form-text">Distancia horizontal desde el punto de lanzamiento</div>
                         </div>
 
-                        <!-- Botones de Acción -->
-                        <div class="exercise-actions mt-4">
-                            <div class="d-flex gap-3 justify-content-end">
-                                <button type="button" class="btn btn-outline-secondary" id="cancelBtn">
-                                    <i class="fas fa-times me-2"></i>Cancelar
-                                </button>
-                                <button type="button" class="btn btn-warning" id="resetBtn">
-                                    <i class="fas fa-redo me-2"></i>Limpiar
-                                </button>
-                                <button type="submit" class="btn btn-success" id="submitBtn">
-                                    <i class="fas fa-paper-plane me-2"></i>Enviar Respuestas
-                                </button>
-                            </div>
+                        <!-- Botones -->
+                        <div class="exercise-actions mt-4 d-flex justify-content-end gap-3">
+                            <button type="button" class="btn btn-outline-secondary" id="cancelBtn">
+                                <i class="fas fa-times me-2"></i>Cancelar
+                            </button>
+                            <button type="button" class="btn btn-warning" id="resetBtn">
+                                <i class="fas fa-redo me-2"></i>Limpiar
+                            </button>
+                            <button type="submit" class="btn btn-success" id="submitBtn">
+                                <i class="fas fa-paper-plane me-2"></i>Enviar Respuestas
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -151,18 +147,21 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body" id="resultsModalBody">
-                    <!-- Contenido dinámico de resultados -->
+                    <!-- Contenido dinámico -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" id="nextExerciseBtn">Siguiente Ejercicio</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Cerrar
+                    </button>
+                    <button type="button" class="btn btn-primary" id="nextExerciseBtn">
+                        Siguiente Ejercicio
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/ejercicio.js"></script>
 </body>
 </html>
