--- a/proyecto-matematica/registrarse.html
+++ b/proyecto-matematica/registrarse.html
@@ -44,8 +44,7 @@
 
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password" required 
-                           minlength="6">
+                    <input type="password" class="form-control" id="password" required minlength="6">
                     <div class="form-text">Mínimo 6 caracteres</div>
                 </div>
 
@@ -75,7 +74,6 @@
         </div>
     </div>
 
-    <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/registrarse.js"></script>
 </body>
 </html>
