--- a/proyecto-matematica/ejercicio.html
+++ b/proyecto-matematica/ejercicio.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFINITE AFO - Ejercicio</title>
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- CSS personalizado -->
     <link rel="stylesheet" href="./assets/css/ejercicio.css">
 </head>
+
 <body class="ejercicio-body">
-    <!-- Header -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="./dashboard.html">
-                <i class="fas fa-infinity me-2"></i>
-                INFINITE AFO
+                <i class="fas fa-infinity me-2"></i> INFINITE AFO
             </a>
-            
+
             <div class="navbar-nav ms-auto">
                 <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" data-bs-toggle="dropdown">
                         <i class="fas fa-user me-1"></i>
                         <span id="currentUser">Usuario</span>
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="./dashboard.html">
                             <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                         </a></li>
+
                         <li><hr class="dropdown-divider"></li>
+
                         <li><a class="dropdown-item" href="#" id="logoutBtn">
                             <i class="fas fa-sign-out-alt me-2"></i>Cerrar Sesión
                         </a></li>
@@ -37,131 +43,151 @@
         </div>
     </nav>
 
-    <!-- Contenido Principal -->
+    <!-- CONTENIDO PRINCIPAL -->
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-8 mx-auto">
 
-                <!-- Header del Ejercicio -->
+                <!-- Título -->
                 <div class="exercise-header mb-4">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h2 id="exerciseTitle">Ejercicio de Funciones</h2>
-                        <div class="exercise-info">
-                            <span class="badge bg-primary" id="moduleBadge">Módulo</span>
-                            <span class="badge bg-secondary" id="difficultyBadge">Nivel</span>
+                        <h2 id="exerciseTitle">Ejercicio</h2>
+                        <div>
+                            <span class="badge bg-primary" id="moduleBadge"></span>
+                            <span class="badge bg-secondary" id="difficultyBadge"></span>
                         </div>
                     </div>
-                    <p class="text-muted" id="exerciseDescription">
-                        Resuelve el siguiente ejercicio paso a paso.
-                    </p>
+                    <p class="text-muted" id="exerciseDescription"></p>
                 </div>
 
                 <!-- Imagen -->
                 <div class="exercise-image-container mb-4">
-                    <div class="image-wrapper">
-                        <img id="exerciseImage" src="./assets/images/placeholder-graph.png" 
-                             alt="Gráfico del ejercicio" class="exercise-image">
-                        <div class="image-caption">
-                            <i class="fas fa-info-circle me-1"></i>
-                            <span id="imageCaption">Representación gráfica del problema</span>
-                        </div>
+                    <img id="exerciseImage" src="./assets/images/placeholder-graph.png"
+                         class="exercise-image" alt="Imagen del ejercicio">
+                    <div class="image-caption">
+                        <i class="fas fa-info-circle me-1"></i>
+                        <span id="imageCaption"></span>
                     </div>
                 </div>
 
                 <!-- Contexto -->
                 <div class="exercise-context mb-4">
-                    <h5><i class="fas fa-book me-2"></i>Contexto del Problema</h5>
-                    <div class="context-text" id="contextText">
-                        Aquí se describirá el contexto del ejercicio cargado desde el servidor.
-                    </div>
+                    <h5><i class="fas fa-book me-2"></i>Contexto</h5>
+                    <div id="contextText" class="context-text"></div>
                 </div>
 
-                <!-- Preguntas -->
+                <!-- PREGUNTAS -->
                 <div class="exercise-questions">
                     <h5><i class="fas fa-question-circle me-2"></i>Preguntas</h5>
-                    
-                    <form id="exerciseForm">
-                        <!-- Pregunta 1 -->
+
+                    <form id="exerciseForm" autocomplete="off">
+
+                        <!-- PREGUNTA 1 -->
                         <div class="question-item mb-4">
-                            <label for="answer1" class="question-label">
-                                <strong>1.</strong> 
-                                <span id="question1Text">Pregunta 1</span>
+                            <label class="question-label">
+                                <strong>1.</strong> <span id="question1Text"></span>
                             </label>
                             <div class="input-group">
-                                <input type="text" class="form-control answer-input" 
-                                       id="answer1" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">unidad</span>
+                                <input autocomplete="off" type="text" id="answer1" 
+                                       class="form-control answer-input" placeholder="Respuesta...">
+                                <span class="input-group-text" id="unit1"></span>
                             </div>
                         </div>
 
-                        <!-- Pregunta 2 -->
+                        <!-- PREGUNTA 2 -->
                         <div class="question-item mb-4">
-                            <label for="answer2" class="question-label">
-                                <strong>2.</strong> 
-                                <span id="question2Text">Pregunta 2</span>
+                            <label class="question-label">
+                                <strong>2.</strong> <span id="question2Text"></span>
                             </label>
                             <div class="input-group">
-                                <input type="text" class="form-control answer-input" 
-                                       id="answer2" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">unidad</span>
+                                <input autocomplete="off" type="text" id="answer2" 
+                                       class="form-control answer-input" placeholder="Respuesta...">
+                                <span class="input-group-text" id="unit2"></span>
                             </div>
                         </div>
 
-                        <!-- Pregunta 3 -->
+                        <!-- PREGUNTA 3 -->
                         <div class="question-item mb-4">
-                            <label for="answer3" class="question-label">
-                                <strong>3.</strong> 
-                                <span id="question3Text">Pregunta 3</span>
+                            <label class="question-label">
+                                <strong>3.</strong> <span id="question3Text"></span>
                             </label>
                             <div class="input-group">
-                                <input type="text" class="form-control answer-input" 
-                                       id="answer3" placeholder="Ingresa tu respuesta...">
-                                <span class="input-group-text">unidad</span>
+                                <input autocomplete="off" type="text" id="answer3" 
+                                       class="form-control answer-input" placeholder="Respuesta...">
+                                <span class="input-group-text" id="unit3"></span>
+                            </div>
+                        </div>
+
+                        <!-- PREGUNTA 4 -->
+                        <div class="question-item mb-4">
+                            <label class="question-label">
+                                <strong>4.</strong> <span id="question4Text"></span>
+                            </label>
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" id="answer4"
+                                       class="form-control answer-input" placeholder="Respuesta...">
+                                <span class="input-group-text" id="unit4"></span>
+                            </div>
+                        </div>
+
+                        <!-- PREGUNTA 5 -->
+                        <div class="question-item mb-4">
+                            <label class="question-label">
+                                <strong>5.</strong> <span id="question5Text"></span>
+                            </label>
+                            <div class="input-group">
+                                <input autocomplete="off" type="text" id="answer5"
+                                       class="form-control answer-input" placeholder="Respuesta...">
+                                <span class="input-group-text" id="unit5"></span>
                             </div>
                         </div>
 
                         <!-- Botones -->
-                        <div class="exercise-actions mt-4 d-flex justify-content-end gap-3">
-                            <button type="button" class="btn btn-outline-secondary" id="cancelBtn">
+                        <div class="d-flex justify-content-end gap-3 mt-4">
+                            <button type="button" id="cancelBtn" class="btn btn-outline-secondary">
                                 <i class="fas fa-times me-2"></i>Cancelar
                             </button>
-                            <button type="button" class="btn btn-warning" id="resetBtn">
+                            <button type="button" id="resetBtn" class="btn btn-warning">
                                 <i class="fas fa-redo me-2"></i>Limpiar
                             </button>
-                            <button type="submit" class="btn btn-success" id="submitBtn">
-                                <i class="fas fa-paper-plane me-2"></i>Enviar Respuestas
+                            <button type="submit" id="submitBtn" class="btn btn-success">
+                                <i class="fas fa-paper-plane me-2"></i>Enviar
                             </button>
                         </div>
                     </form>
                 </div>
+
             </div>
         </div>
     </div>
 
-    <!-- Modal de Resultados -->
-    <div class="modal fade" id="resultsModal" tabindex="-1">
+    <!-- MODAL RESULTADOS -->
+    <div class="modal fade" id="resultsModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
+
                 <div class="modal-header">
-                    <h5 class="modal-title" id="resultsModalTitle">Resultados del Ejercicio</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <h5 class="modal-title" id="resultsModalTitle">Resultados</h5>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body" id="resultsModalBody">
-                    <!-- Contenido dinámico -->
-                </div>
+
+                <div class="modal-body" id="resultsModalBody"></div>
+
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        Cerrar
-                    </button>
-                    <button type="button" class="btn btn-primary" id="nextExerciseBtn">
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button id="nextExerciseBtn" class="btn btn-primary">
                         Siguiente Ejercicio
                     </button>
                 </div>
+
             </div>
         </div>
     </div>
 
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/utils.js"></script>
     <script src="./assets/js/ejercicio.js"></script>
+
 </body>
 </html>
