--- a/proyecto-matematica/index.html
+++ b/proyecto-matematica/index.html
@@ -11,7 +11,8 @@
 <body class="login-body">
     <div class="login-container">
         <div class="login-card">
-            <div class="text-center mb-4">
+            <div class="text-center mb-3">
+                <img src="./assets/images/Infinite.png" alt="INFINITE AFO" style="width: 120px; margin-bottom: 10px;">
                 <h1 class="project-title">INFINITE AFO</h1>
                 <p class="project-subtitle">Aprendizaje Formativo Online</p>
             </div>
