--- a/proyecto-matematica/dashboard.html
+++ b/proyecto-matematica/dashboard.html
@@ -18,8 +18,8 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="./dashboard.html">
-                <i class="fas fa-infinity me-2"></i>
+            <a class="navbar-brand d-flex align-items-center" href="./dashboard.html">
+                <img src="./assets/images/Infinite.png" style="width: 40px; margin-right: 10px;">
                 INFINITE AFO
             </a>
             
