--- a/proyecto-matematica/ejercicio.html
+++ b/proyecto-matematica/ejercicio.html
@@ -17,9 +17,11 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="./dashboard.html">
-                <i class="fas fa-infinity me-2"></i> INFINITE AFO
+            <a class="navbar-brand d-flex align-items-center" href="./dashboard.html">
+                <img src="./assets/images/Infinite.png" style="width: 40px; margin-right: 10px;">
+                INFINITE AFO
             </a>
+
 
             <div class="navbar-nav ms-auto">
                 <div class="nav-item dropdown">
